overflow/border fix

--- a/Aquarium/style.css
+++ b/Aquarium/style.css
@@ -85,6 +85,7 @@ main {
   border-radius: 16px;
   flex-direction: column;
   position: relative;
+  overflow: hidden;
 }
 
 header {
@@ -143,8 +144,7 @@ section#Aquarium {
   width: 100%;
   height: 85%;
   position: relative;
-  overflow: hidden;
-  border-radius: 5px;
+  border-radius: 16px;
 }
 
 .corals {
